tests/algorithms/x/Java/graphs/graph_adjacency_matrix.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden430_graph_adjacency_matrix1482904099/001/Main.java:151: error: incompatible types: LinkedHashMap<String,Object> cannot be converted to Map<Long,Long>
g.vertex_to_index = new java.util.LinkedHashMap<String, Object>();
                    ^
1 error
